tetrate/tis1504/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-existing-gatewayclass
spec:
  validationFailureAction: Enforce
